feat: add flow to get stats
